<resources>
    <string name="app_name">OutdoorRent</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Masuk</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="title_activity_register">Daftar</string>
    <string name="prompt_full_name">Nama Lengkap</string>
    <string name="prompt_phone_number">No HP</string>
    <string name="prompt_password_short">Password</string>
    <string name="prompt_confirm_password">Konfirmasi Password</string>
    <string name="action_register">Daftar</string>
    <string name="error_invalid_password_confirm">Konfirmasi password tidak sesuai</string>
    <string name="error_phone_email_required">Salah satu dari No HP atau Email harus diisi</string>
    <string name="error_password_length">Password jangan kurang dari 5 karakter</string>
</resources>
